Added getCountries for company
